--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.16.3",
     "moment": "^2.22.2",
+    "path": "^0.12.7",
     "react": "^16.4.1",
     "react-autosuggest": "^9.3.4",
     "react-bootstrap": "^0.32.1",
@@ -18,6 +20,7 @@
     "semantic-ui-react": "^0.81.1"
   },
   "scripts": {
+    "prod" : "rm -rf /build && react-scripts build && node main",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
